<?xml version="1.0"?>
<package>
  <name>path_array_rviz_plugin</name>

  <version>0.0.1</version>

  <description>The path_array_rviz_plugin package</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/path_array_rviz_plugin</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <!-- <build_depend>qtbase5-dev</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- <run_depend>libqt5-core</run_depend> -->
  <!-- <run_depend>libqt5-gui</run_depend> -->
  <!-- <run_depend>libqt5-widgets</run_depend> -->
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
